--- a/Hospital Management/Views/Home/Covid.cshtml
+++ b/Hospital Management/Views/Home/Covid.cshtml
@@ -3,29 +3,29 @@
     Layout = "_Layout";
 }
 <div class="container-fluid mt-4">
-    <div class="container-fluid row mx-auto">
+    <div class="container-fluid row mx-auto mb-2">
         <div class="col-6">
-            <img class="img-fluid" src="/images/Picture3.png" style="object-fit: cover"/>
+            <img class="img-fluid mx-auto" src="/images/Picture3.png" style="object-fit: contain; max-height: 800px"/>
         </div>
         <div class="col-6">
-            <img class="img-fluid" src="/images/Picture4.png" style="object-fit: cover"/>
+            <img class="img-fluid mx-auto" src="/images/Picture4.png" style="object-fit: contain; max-height: 800px"/>
         </div>
     </div>
-    <div class="container-fluid row mx-auto">
-        <img class="img-fluid" src="/images/Picture5.jpg" style="object-fit: cover"/>
+    <div class="container-fluid row mx-auto mb-2">
+        <img class="img-fluid" src="/images/Picture5.jpg" style="object-fit: contain; max-height: 800px"/>
     </div>
 
-    <div class="container-fluid row mx-auto">
-        <img class="img-fluid" src="/images/Picture6.jpg" style="object-fit: cover"/>
+    <div class="container-fluid row mx-auto mb-2">
+        <img class="img-fluid" src="/images/Picture6.jpg" style="object-fit: contain; max-height: 800px"/>
     </div>
     
-    <div class="container-fluid row mx-auto">
-        <img class="img-fluid" src="/images/Picture7.png" style="object-fit: cover"/>
+    <div class="container-fluid row mx-auto mb-2">
+        <img class="img-fluid" src="/images/Picture7.png" style="object-fit: contain; max-height: 800px"/>
     </div>
 
     
-    <div class="container-fluid row mx-auto">
-        <img class="img-fluid" src="/images/Picture8.jpg" style="object-fit: cover"/>
+    <div class="container-fluid row mx-auto mb-2">
+        <img class="img-fluid" src="/images/Picture8.jpg" style="object-fit: contain; max-height: 800px"/>
     </div>
 
 </div>
